--- a/verkefni.tex
+++ b/verkefni.tex
@@ -217,13 +217,13 @@ It states a sufficient condition on a subset of the unit circle in $\mathbb{C}$ 
 The theorem is proved in two ways.
 Firstly in section \ref{section2}, where it is done in the same manner as Rudin, and again in section \ref{section3}, where it shown to be a corollary of a theorem of Bishop and the F. and M. Riesz theorem.
 
-Section \ref{section1} is dedicated to prove the F. and M. Riesz theorem, which states a sufficient condition for a measure to be absolutely continuous with regards to the Lebesgue-measure on the unit circle.
-In section \ref{section3} we state and prove Bishop's generalisation of the Rudin-Carleson.
-We then show the Rudin-Carleson theorem to be a corollary of Bishop's generalisation and the F. and M. Riesz theorem.
-We look at the role of Bishop's theorem in the classification of closed subsets of the boundary of the unit disk in $\mathbb{C}^n$ in section \ref{section4}.
+Section \ref{section1} is dedicated to proving the F. and M. Riesz theorem, which states a sufficient condition for a measure to be absolutely continuous with regards to the Lebesgue-measure on the unit circle.
+In section \ref{section3} we state and prove Bishop's generalization of the Rudin-Carleson.
+We then show the Rudin-Carleson theorem to be a corollary of Bishop's generalization and the F. and M. Riesz theorem.
+We look at the role of Bishop's theorem in the classification of closed subsets of the boundary of the unit ball in $\mathbb{C}^n$ in section \ref{section4}.
 
-In section \ref{section5} we look at a way to relax the condition on the set in Bishop's theorem.
-The set in Bishop's theorem is conditioned such that all continuous functions thereon can be extended, that is the is independent of the function we want to extend.
+In section \ref{section5} we consider a way to relax the condition on the set in Bishop's theorem.
+The set in Bishop's theorem is conditioned such that all continuous functions thereon can be extended, that is, the condition is independent of the function we want to extend.
 The result of section \ref{section5} is a theorem that gives a sufficient condition on set such that a given continuous function thereon can be extended.
 
 
@@ -231,17 +231,18 @@ The result of section \ref{section5} is a theorem that gives a sufficient condit
 \section*{\huge Útdráttur}
 % Hér kemur útdráttur á íslensku sem er að hámarki 250 orð. Reynið að koma útdráttum á eina blaðsíðu en ef tvær blaðsíður eru nauðsynlegar á seinni blaðsíða útdráttar að hefjast á oddatölusíðu (hægri síðu).
 Aðalefni ritgerðarinnar er setning Rudin-Carleson.
-Hún gefur okkur nægjanlegt skilyrði á hlutmengi í einingarhringnum í $\mathbb{C}$ þannig að framlengja megi sérhvert samfallt fall á menginu í samfellt fall á lokuðu einingarhringskífunni sem er fágað á opnu einingarhringskífunni.
+Hún gefur okkur nægjanlegt skilyrði á hlutmengi í einingarhringnum þannig að framlengja megi sérhvert samfallt fall á menginu í samfellt fall á lokuðu einingarhringskífunni sem er fágað á opnu einingarhringskífunni.
 Hún er sönnuð á tvo vegu.
-Fyrst í kafli \ref{section2}, þar sem farið er sömu leið og Rudin gerði upprunalega, og aftur í kafla \ref{section3}, þar sem sýnt er að hún er fylgisetning setningar Bishops og setningar F. og M. Riesz.
+Fyrst í kafli \ref{section2}, þar sem farið er sömu leið og Rudin gerði upprunalega, og aftur í kafla \ref{section3}.
+Þar er sýnt að hún sé fylgisetning setningar Bishops og setningar F. og M. Riesz.
 
 Kafli \ref{section1} er tileinkaður sönnun á setningu F. og M. Riesz, sem gefur okkur nægjanlegt skilyrði þess að mál sé alsamfellt með tilliti til Lebesgue-málsins á einingahringnum.
 Í kafla \ref{section3} setjum við fram og sönnum alhæfingu Bishops á setningu Rudin-Carleson.
-Síðan sýnum við að Rudin-Carleson setningin sé fylgisetning setningar Bishop's og setningar F. og M. Riesz.
-Við skoðum síðan í kafla \ref{section4} hvernig setning Bishops getur hjálpað okkur að flokka lokuð hlutmengi jaðars einingahrings $\mathbb{C}^n$.
+Við sýnum síðan að Rudin-Carleson setningin sé fylgisetning setningar Bishops og setningar F. og M. Riesz.
+Í kafla \ref{section4} er athugað hvernig setning Bishops getur hjálpað okkur að flokka lokuð hlutmengi jaðars einingarkúlu $\mathbb{C}^n$.
 
-Í kafla \ref{section5} skoðum hvernig slaka má á skilyrðinnum í setningu Bishops.
-Mengið í setningu Bishops er skilyrt þanni að öll samfelld föll á því megi framlengja, það er að segja skilyrðin eru óháð fallinu sem við viljum framlengja.
+Í kafla \ref{section5} skoðum hvernig slaka má á skilyrðum setningar Bishops.
+Mengið í setningu Bishops er skilyrt þannig að öll samfelld föll á því megi framlengja, það er að segja skilyrðin eru óháð fallinu sem við viljum framlengja.
 Niðurstaðan í kafla \ref{section5} er setning sem gefur nægjanleg skilyrði á mengi þannig að framlengja megi gefið samfellt fall á menginu.
 \vfill
 \newpage
@@ -255,16 +256,16 @@ Niðurstaðan í kafla \ref{section5} er setning sem gefur nægjanleg skilyrði 
 %Í þessum kafla koma fram þakkir til þeirra sem hafa styrkt rannsóknina með fjárframlögum, aðstöðu eða vinnu. T.d. styrktarsjóðir, fyrirtæki, leiðbeinendur, og aðrir aðilar sem hafa á einhvern hátt aðstoðað við gerð verkefnisins, þ.m.t. vinir og fjölskylda ef við á. Þakkir byrja á oddatölusíðu (hægri síðu).
 I would like to thank my supervisor Benedikt Steinar Magnússon for his excellent guidance.
 I would also like to thank Ragnar Sigurðsson for his assistance throughout.
-I would like to thank my peers Atli, Eyleifur, Hjörtur, and Þórarinn.
-
-Sandra
+I would like to thank my peers Atli, Eyleifur, Garðar, Hjörtur, and Þórarinn.
+I would like to thank Sandra for unending assistance.
+% Sandra
 % Benni
 % Ragnar
 % Atli
 % Hjörtur
 % Eyleifur
 % Tóti
-Garðar
+% Garðar
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
@@ -278,7 +279,7 @@ The result of Bishop doesn't just generalize the Rudin-Carleson theorem (allowin
 We start of by proving the F. and M. Riesz theorem in section \ref{section1}.
 To achieve this some study of the Poisson kernel is needed.
 The Poisson kernel is classically used to find harmonic function on the unit disk given continuous boundary values.
-It is used to this end in the proof of the Rudin-Carleson theorem present in this thesis, but its place in the proof of the F. and M. Riesz theorem is less standard.
+It is used to this end in the proof of the Rudin-Carleson theorem present in section \ref{section2}, but its place in the proof of the F. and M. Riesz theorem is less standard.
 
 The Rudin-Carleson theorem is proved in section \ref{section2}.
 It is done in the same way Rudin did in his original paper.
@@ -343,7 +344,7 @@ It so happens that defining $\lambda$ by
 yields a measure.
 This measure is referred to as \emph{\label{index2} the total variation of $\mu$} and denoted by $|\mu|$ (for example, $|\mu|(E)$).
 A proof that $|\mu|$ is a measure and more detail on complex measures can be found in chapter $6$ of \citep{rudin2}. 
-A useful property of the total variation of $\mu$ is that $\mu \lll |\mu|$, that is a $|\mu|$-null set is also a $\mu$-null set.
+A useful property of the total variation of $\mu$ is that $\mu \lll |\mu|$, that is a $|\mu|$-null set is also $\mu$-null.
 
 \label{index20}
 Recall that a positive measure $\mu$ is said to be \emph{regular} if
@@ -453,7 +454,7 @@ If $U$ and $V$ are both homeomorphic to $\mathbb{D}$ then there exists a conform
 \end{corollary}
 \begin{proof}
 The Riemann mapping theorem gives us $\Phi_1$, a conformal mapping from $\mathbb{D}$ to $U$, and $\Phi_2$, a conformal mapping from $\mathbb{D}$ to $V$.
-Since $\Phi_2$ is conformal $\Phi_2^{-1}$ is also bijective, holomorphic with an holomorphic inverse, meaning $\Phi_2^{-1}$ is also conformal.
+Since $\Phi_1$ is conformal $\Phi_1^{-1}$ is also bijective, holomorphic with an holomorphic inverse, meaning $\Phi_1^{-1}$ is also conformal.
 The desired conformal mapping from $U$ to $V$ is therefore $\Phi_2 \circ \Phi_1^{-1}$.
 \end{proof}
 In this thesis the disk algebra $\mathcal{A}$ is of special interest so a version of the Riemann mapping theorem that considers continuity at the boundary is desirable.
@@ -481,7 +482,7 @@ So $\lambda$ is also a Jordan curve.
 We can now prove the corollary.
 Let $f$ be a homeomorphism from $\overline{\mathbb{D}}$ to $K$.
 The Riemann mapping theorem also gives us a conformal map $\Phi: \mathbb{D} \rightarrow f(\mathbb{D})$.
-We know that $\overline{\mathbb{D}}$ is compact, so $K = f(\overline{\mathbb{D}})$ is also compact, since the image of a compact set under a continuous mapping is also compact.
+We know that $\overline{\mathbb{D}}$ is compact, so $K = f(\overline{\mathbb{D}})$ is also compact, since the image of a compact set under a continuous mapping is compact.
 Moreover, $K$ is bounded.
 % COMMENT(gardar): nit: since $\partial \mathbb{D}$ is the Jordan curve $\alpha(t) = e^{2\pi i t}, t \in [0,1]$
 So $f(\partial \mathbb{D}) = \partial f(\mathbb{D}) = \partial K$ and $\partial K$ is a Jordan curve, since $\partial \mathbb{D}$ is a Jordan curve.
@@ -492,7 +493,7 @@ This allows us to use Carathéodory's theorem to extend $\Phi$ continuously and 
 \subsection{Complex analysis in several variables}
 \label{index9}
 We will briefly touch on multivariate complex analysis so we will need a definition of a holomorphic function in $\mathbb{C}^n$.
-If $U \subset \mathbb{C}^n$ is open and $f: U \rightarrow \mathbb{C}$ such that $f$ is holomorphic in each variable separately we say that $f$ is \emph{holomorphic on $U_n$}.
+If $U \subset \mathbb{C}^n$ is open and $f: U \rightarrow \mathbb{C}$ such that $f$ is holomorphic in each variable separately we say that $f$ is \emph{holomorphic on $U$}.
 That is, the map $z \mapsto f(z_1, ..., z_{k - 1}, z, z_{k + 1}, ..., z_n)$ is holomorphic for $k = 1, 2, ..., n$.
 We will also denote common sets by there counterpart in single variate complex analysis with an added `$n$' in the superscript.
 This does not, however, denote an $n$-fold Cartesian product.
@@ -501,7 +502,7 @@ This does not, however, denote an $n$-fold Cartesian product.
 \begin{definition}
 \label{index10}
 Let $X$ be a topological space.
-We say that $X$ is \emph{locally compact} if for each $x \in X$ there exists a open set $U_x$ such that $x \in U_x$ and $\overline{U_x}$ is compact.
+We say that $X$ is \emph{locally compact} if for each $x \in X$ there exists an open set $U_x$ such that $x \in U_x$ and $\overline{U_x}$ is compact.
 \end{definition}
 \label{index11}
 We will denote by $C(X)$ the continuous functions on $X$.
@@ -537,13 +538,13 @@ A proof of this theorem can be found on page $96$ in \citep{rudin2}.
 \label{index14}
 Let's recall what the $L^p$ spaces are.
 Let $X$ be a space with $\sigma$-algebra $\mathcal{F}$, and $\mu$ be a measure on that $\sigma$-algebra.
-We say a measurable function is in $\mathcal{L}^1(X, \mu)$ if
+We say a measurable function $f$ is in $\mathcal{L}^1(X, \mu)$ if
 \[
 	\int |f|\ d\mu < +\infty
 \]
 and we say it is $\mathcal{L}^p(X, \mu)$ if $|f|^p$ is in $\mathcal{L}^1(X, \mu)$, for $0 < p < +\infty$.
 We then define an equivalence relation $\sim$ such that $f \sim g$ if and only if $\mu(\{x \in X;\ f(x) \neq g(x)\}) = 0$.
-We define $L^p(X, \mu)$ to be the quotient space $\mathcal{L}(X, \mu)/\sim$.
+We define $L^p(X, \mu)$ to be the quotient space $\mathcal{L}^p(X, \mu)/\sim$.
 The space $L^p(X, \mu)$ has one major benefit over $\mathcal{L}^p(X, \mu)$,
 \[
 \label{index15}
@@ -560,30 +561,30 @@ When proving \ref{bishopstheorem} we need the following Hahn-Banach separation t
 Let
 	$X$ be a compact space,
 	$B$ be a closed convex subset of $C(X)$,
-	and $f$ be a function in $C(X)$.
+	and $f$ be a function in $C(X)$ but not in $B$.
 Then there exists a continuous linear functional $\alpha$ such that $|\alpha| < 1$ on $B$ and $\alpha(f) > 1$.
 \end{theorem}
 \subsection{The Riesz representation theorem}
 Let
 	$X$ be a $\sigma$-finite measurable space with measure $\mu$,
-	choose $p$ and $q$ such that $1 < p, q < +\infty$ and $1/p + 1/q = 1$,
+	$p$ and $q$ be such that $1 < p, q < +\infty$ and $1/p + 1/q = 1$,
 	and $g \in L^q(\mu)$.
 We can then define a linear functional on $L^p(X, \mu)$ by
 \[
 	\alpha(f) = \int fg\ d\mu.
 \]
-\label{index16}
 The Hölder inequality tells us it is bounded.
+\label{index16}
 Recall that the Hölder inequality states that if $f$ and $g$ are measurable function with $p$ and $q$ as above then
 \[
 	\|fg\|_1 \leq \|f\|_p\|g\|_q.
 \]
-So each function in $L^q(X, \mu)$ gives us a bounded linear functional.
+So each function in $L^q(X, \mu)$ gives us a bounded linear functional on $L^p(X, \mu)$.
 The following theorem states the inverse, that is, each bounded linear functional on $L^p(X, \mu)$ can be represented by a function in $L^q(X, \mu$).
 \begin{theorem}[The Riesz representation theorem for bounded linear functionals on $L(X, \mu)$ with $\sigma$-finite $X$ \citep{rudin2}]
 Let $1 < p < +\infty$,
 	$q$ be such that $1/p + 1/q = 1$,
-	$\mu$ be a positive measure on $\sigma$-finite space $X$,
+	$\mu$ be a positive measure on a $\sigma$-finite space $X$,
 	and $\alpha$ be a bounded linear functional on $L^p(\mu)$.
 There then exists a unique $g \in L^q(\mu)$ such that
 \[
@@ -611,7 +612,7 @@ There then exists a regular measure $\mu$ such that
 for all $f \in C_0(X)$ and
 \item[\emph{(ii)}]
 \[
-	\|\alpha\| = |\mu|(X).
+	\|\alpha\| = \|\mu\|.
 \]
 \end{enumerate}
 \end{theorem}
@@ -620,7 +621,7 @@ for all $f \in C_0(X)$ and
 
 
 \chapter{The Rudin-Carleson theorem}
-\section{F. and M. Riesz theorem}
+\section{The F. and M. Riesz theorem}
 \label{section1}
 The main result of this section is that the annihilating measures of 
 \[
@@ -655,7 +656,7 @@ We will therefore, for some infinite $S \subset \mathbb{N}$, define
 	\lim_{n \in S} a_n = \lim_{n \in \mathbb{N}} a_{s_n}
 \]
 where $s_k$ is the $k$-th smallest element of $S$.
-We similarly define the sequence $(a_n)_{n \in S}$ to be $(a_{s_n})_{n \in \mathbb{N}}$ with $s_k$ defined in the same manner as earlier.
+We similarly define the sequence $(a_n)_{n \in S}$ to be $(a_{s_n})_{n \in \mathbb{N}}$ with $(s_n)_{n \in \mathbb{N}}$ defined in the same manner as earlier.
 \begin{theorem}[Bolzano-Weierstrass]
 %                                                                                           v This has to be weak because of (M, M, M, M, M, M, ...)
 Let $(a_n)_{n \in \mathbb{N}}$ be a sequence of numbers in $\mathbb{R}^n$, such that $|a_n| < M < +\infty$, for all $k \in \mathbb{N}$.
@@ -687,9 +688,9 @@ $S_k^- = \{n \in S_k;\ a_n < (U + L)/2\}$, and $S_k^+ = \{n \in S_k;\ a_n > (U +
 We now set $S_{k + 1} = S_k^-$ if it has infinitely many elements, otherwise we set $S_{k + 1} = S_k^+$.
 We conclude our construction by setting
 \[
-	S = \bigcup_{n \in \mathbb{N}} r_n,
+	S = \bigcup_{n \in \mathbb{N}} s_n,
 \]
-where $r_n$ is the $n$-th smallest element of $S_n$.
+where $s_n$ is the $n$-th smallest element of $S_n$.
 This gives us the convergent sequence $(a_n)_{n \in S}$ with limit
 \[
 	\sum_{k = 0}^{+\infty} \delta_k 2^{-k}
@@ -711,7 +712,7 @@ If we do this $n - 2$ more times we get a desired subsequence.
 \end{proof}
 We are mostly concerned with the case $n = 2$ since our interest is in $\mathbb{C}$.
 \begin{theorem}[Ascoli-Arzela]
-Let $\mathcal{F}$ be a pointwise bounded equicontinuous collection of complex functions on a metric space $(X, d)$, and $X$ is separable.
+Let $\mathcal{F}$ be a pointwise bounded equicontinuous collection of complex functions on a separable metric space $(X, d)$.
 Then every sequence in $\mathcal{F}$ contains a subsequence that converges uniformly on every compact subsets of $X$.
 \end{theorem}
 \label{index23}
@@ -730,12 +731,12 @@ Let $S_1$ index that subsequence.
 We can use this process to generate sets $S_0 \supset S_1 \supset ...$ such that $(f_n(x_k))_{n \in S_k}$ is convergent.
 We then set
 \[
-	S = \bigcup_{k \in \mathbb{N}} r_k
+	S = \bigcup_{k \in \mathbb{N}} s_k
 \]
-where $r_k$ is the $k$-th smallest element of $S_k$.
+where $s_k$ is the $k$-th smallest element of $S_k$.
 We now have concluded the first step of the proof.
 
-We will now assume the $(f_n)_{n \in \mathbb{N}}$ is pointwise convergent on $E$,
+We will now assume that $(f_n)_{n \in \mathbb{N}}$ is pointwise convergent on $E$,
 	let $K$ be a compact subset of $X$, and
 	$\varepsilon > 0$.
 Equicontinuity gives us a $\delta > 0$ such that $d(x, y) < \delta$ implies that $|f_n(x) - f_n(y)| < \varepsilon /3$, for all $n$.
@@ -775,12 +776,12 @@ This stems from the fact that
 \]
 A benefit of this rewrite is that $P(\ \cdot\ , e^{i\theta})$ is defined on $\mathbb{D}$.
 
-For $f \in L^1(\mathbb{T})$ we define \emph{the Poisson integral of $f$} as the function defined on $\mathbb{D}$ by
+For $f \in L^1(\mathbb{T})$ we define \emph{the Poisson integral of $f$} as the function on $\mathbb{D}$ by
 \[
 	P[f](z) = \frac{1}{2\pi} \int_{-\pi}^{\pi} f(e^{it})P(z, e^{it})\ dt.
 \]
 
-For a measure $\mu$ we define \emph{the Poisson integral of $\mu$} as the function defined on $\mathbb{D}$ by
+For a measure $\mu$ on $\mathbb{T}$ we define \emph{the Poisson integral of $\mu$} as the function on $\mathbb{D}$ by
 \[
 	P[d\mu](z) = \int_{\mathbb{T}} P(z, e^{it})\ d\mu(e^{it}).
 \]
@@ -939,7 +940,7 @@ Note that $h_k(e^{it}) = u_{r_k}(e^{it})$, so
 	&= \int_{\mathbb{T}}P(z, e^{it})\ d\mu(e^{it})\\
 	&= P[d\mu](z),
 \end{align*}
-where the fifth equality is achieved by putting $g = P(z, e^{it})$ into (\ref{eq:1}).
+where the fifth equality is achieved by putting $g = P(z, e^{it})$ into equation (\ref{eq:1}).
 This concludes the proof of existence.
 
 Let's assume that $P[d\mu] = 0$, and let $f \in C(\mathbb{T})$, $u = P[f]$ and $v = P[d\mu]$.
@@ -1010,7 +1011,7 @@ For a function $f$ holomorphic on $\mathbb{D}$ we define
 and we say that $f$ is in $H^p$ if $\|f\|_{H^p} < +\infty$.
 These spaces are referred to as the \emph{Hardy spaces}.
 \end{definition}
-A useful result from the theory of Hardy spaces is that if $f \in H^1$ then there exist $g, h \in H^2$ such that $f = g \cdot h$ and $|f| < |g|$ \citep[Theorem $17.10$]{rudin2}.
+A useful result from the theory of Hardy spaces is that if $f \in H^1$ then there exist $g, h \in H^2$ such that $f = g \cdot h$ and $|f| < |g|^2$ \citep[Theorem $17.10$]{rudin2}.
 \begin{definition}
 \label{index25}
 \begin{figure}[h]
@@ -1055,7 +1056,7 @@ Theorem $11.23$ in \citep{rudin2} (along with discussion on the prior page) stat
 We also have by the Hölder inequality that on a finite measure space (such as $\mathbb{T}$ with the Lebesgue measure) $\|h\|_1 \leq \|h\|_2$.
 So $g$ and $h$ have nontangential limits almost everywere on $\mathbb{T}$.
 This tells us that $f$ also has nontangential limits almost everywhere on $\mathbb{T}$, since $f = g \cdot h$.
-By $f \leq h^2$ we have that $N_{\alpha}f \leq (N_{\alpha}h)^2$, and therefore $N_{\alpha}f \in L^1(\mathbb{T})$.
+By $|f| \leq |h|^2$ we have that $N_{\alpha}f \leq (N_{\alpha}h)^2$, and therefore $N_{\alpha}f \in L^1(\mathbb{T})$.
 Let $F$ be the tangential limit of $f$.
 We have that $|F| \leq N_{\alpha}f$ where $F$ is defined, so $F$ is also in $L^1(\mathbb{T})$.
 Note that
@@ -1073,7 +1074,7 @@ Letting $r$ go to $1$ gives us
 \]
 namely, $f$ is the Poisson integral of $F$.
 \end{proof}
-\begin{theorem}[F. and M. Riesz theorem]
+\begin{theorem}[F. and M. Riesz]
 If $\mu$ is a measure on $\mathbb{T}$ and
 \[
 	\int e^{-int}\ d\mu = 0
@@ -1156,7 +1157,7 @@ Let
 	$\varepsilon > 0$,
 	$K$ be a closed subset of $]0, 1]$ of Lebesgue-measure zero,
 	and $f: K \rightarrow \mathbb{C}$.
-Then there exist pairwise disjoint $E_1, E_2, ..., E_n$ and $w_1, w_2, ..., w_n$ such that 
+Then there exist pairwise disjoint closed $E_1, E_2, ..., E_n$ and $w_1, w_2, ..., w_n$ such that 
 \[
 	E_1 \cup E_2 \cup ... \cup E_n = K
 \]
@@ -1168,7 +1169,7 @@ and
 \begin{proof}
 It suffices to show that the image of each partition is contained in a circle with radius $\varepsilon$ since each square includes a circle.
 Recall that a point $x$ in a set $A$ is a \emph{limit point of $A$} if it is in the closure of $A \setminus \{x\}$.
-Since K is compact, f is uniformly continuous
+Since K is compact, f is uniformly continuous.
 This means we can set $\delta > 0$ such that $|f(x) - f(y)| < \varepsilon$ if $|x - y| < \delta$.
 Let $a_1, a_2, ..., a_{p + 1}$ be a strictly increasing sequence in $]0, 1]$ such that $a_{k + 1} - a_k < \delta/2$, for $k = 1, 2, ..., p$ and $E_k = E \cap ]a_k, a_{k + 1}]$, for $k = 1, 2, ..., p$.
 The only problem with this decomposition is that the sets may not be closed.
@@ -1217,7 +1218,7 @@ Recall from set theory that if $(X, d)$ is a metric space, $A$ is a subset of $X
 \]
 Furthermore, if $A$ is closed then the infimum is obtained at some point in $A$, namely, there exists a point $y \in A$ such $d(x, y) = d(x, A)$.
 Let $X = [0, 1]$ and $H$ be some closed set of Lebesgue-measure zero.
-We will, for reasons that will be made clear later, assume that $\{0, 1\} \subset H$.
+We will, for reasons that will become clear later, assume that $\{0, 1\} \subset H$.
 \label{index28}
 We can now define function $V_H: [0, 1] \rightarrow [0, 1]$ and $H_H: [0, 1] \rightarrow [0, 1]$ such that
 \[
@@ -1230,7 +1231,13 @@ So all points $x$ in $[0, 1] \setminus H$ are on the open interval $]V_H(x), H_H
 We will define function $f: [0, 1] \rightarrow [0, +\infty]$ by
 \[
 \label{index29}
-	f_H(x) = 2\log \left ( \frac{H_H(x) - V_H(x)}{2} \right ) - \log((x - V_H(x))(H_H(x) - x))
+	f_H(x) =
+	\left \{ 
+	\begin{array}{l l}
+		2\log \left ( \frac{H_H(x) - V_H(x)}{2} \right ) - \log((x - V_H(x))(H_H(x) - x)) & \text{if $x$ is not in $H$}\\
+		\infty & \text{if $x$ is in $H$}
+	\end{array}
+	\right .
 \]
 and show that this function has the properties of \ref{mylemma}, but with $\mathbb{T}$ replaced by $[0, 1]$ and $]1, +\infty]$ replaced by $[0, +\infty]$.
 \begin{figure}[h]
@@ -1255,7 +1262,7 @@ $f_{a, b}(x) = f_{a, b}(b + a - x)$.
 \begin{figure}[h]
 \centering
 \includegraphics[width=1\textwidth]{graph2}
-\caption{The graph of $f_{0, 1}$ and $g_{0, 1}$.}
+\caption{The graphs of $f_{0, 1}$ and $g_{0, 1}$.}
 \end{figure}
 The first point gives us a handy estimate and the second tells us $f_{a, b}$ is symmetric around $(a + b)/2$.
 We have that
@@ -1375,8 +1382,8 @@ This trivially holds, since $P_{\lambda}$ is open.
 We may assume that $H$ is not empty, since the statement holds vacuously if that were the case.
 We can also assume without loss of generality that $1$ is in $H$.
 We can now use the injection $e^{it} \mapsto t/(2\pi)$, for $t \in [0, 2\pi[$,  to map $H$ to $H'$ a subset of $[0, 1]$ of Lebesgue-measure zero.
-We will add $1$ into $H$ to make sure it is closed.
-The desired function is then $f_{H'}$ as desctibed above composed with the inverse of the prior injection with some constant added to make it strictly larger than $1$.
+We will add $1$ into $H'$ to make sure it is closed.
+The desired function is then $f_{H'}$, as described above, composed with the inverse of the prior injection with some constant added to make it strictly larger than $1$.
 \end{proof}
 \begin{lemma}
 \label{rudinlemma1}
@@ -1404,7 +1411,7 @@ Let's call it $h_H$ and define
 \[
 	q = \frac{h_{E_1}}{h_{E_0} + h_{E_1}}.
 \]
-Note that $|\arg h_H(z)| \leq \pi/4$ since if a $w \in \mathbb{C}$ had an argument outside of this range then its square would have and argument outside of the range $[-\pi/2, \pi/2]$ meaning $\Re w^2 < 0$.
+Note that $|\arg h_H(z)| \leq \pi/4$ since if a $w \in \mathbb{C}$ had an argument outside of this range then its square would have an argument outside of the range $[-\pi/2, \pi/2]$ meaning $\Re w^2 < 0$.
 Also, $q(z) = 0$ if and only if $h_{E_0} = \infty$, so $q$ is $0$ only on $E_0$, and $q(z) = 1$ if and only if $h_{E_1} = \infty$, so $q$ is $1$ only on $E_1$.
 We now want to show that $0 \leq \Re q \leq 1$.
 We will let $z, w \in \mathbb{C}$, with $|\arg z|, |\arg w| < \pi/4$ and $\Re z, \Re w > 1$, and show that $0 < \Re z/(w + z) < 1$.
@@ -1471,7 +1478,7 @@ Assuming $f_0, f_1, ..., f_{n - 1}$ have been constructed such that
 \]
 with $\lambda_{n - 1} = f - \sum_{k = 0}^{n - 1}f_k$.
 According to \ref{somelemma} we can write $E$ as the union of disjoint closed sets $E_1, E_2, ..., E_p$ such that the oscillation of $\lambda_{n - 1}$ is less than $2^{-n}$ on each $E_k$.
-So we can define $Q_k \subset 2^{1 - n}S$ for $k = 1, 2, ..., p$ such that $Q_k = 2^{-n}S + a_k$ for some $a_k \in S$.
+So we can define $Q_k \subset 2^{1 - n}S$ for $k = 1, 2, ..., p$ such that $Q_k = 2^{-n}S + a_k$ for some $a_k \in S$ and $\lambda_{n - 1}(E_k) \subset Q_k$.
 We can choose $c_k \in Q_k \cap 2^{-n}S$ since $Q_k$ has side length $2^{-n}$ and is a subset of $2^{-n + 1}S$ and both are closed.
 We can now define
 \[
@@ -1529,7 +1536,7 @@ It is also a composition of functions in $\mathcal{A}$ so it is also in $\mathca
 An obvious next step would be a Rudin-Carleson theorem in several complex variables.
 It is tempting to keep the constraints on $E$ unchanged, namely that it is of Lebesgue-measure zero, but this won't work.
 Take as an example $f: E \rightarrow \mathbb{C}$ with $E = \mathbb{T} \times \{1\}$ and $f(z, w) = \overline{z}$.
-Clearly $E$ is of Lebesgue-measure but $f$ cannot be extended.
+Clearly $E$ is of Lebesgue-measure zero but $f$ cannot be extended.
 If we assume it could be extended to some $g = (g_1, g_2)$ in $\mathcal{A}^2$ then, by definition, $g_1$ would be holomorphic on $\mathbb{D}$ and continuous $\overline{\mathbb{D}}$.
 Its holomorphicity tells us that its integral around $r\mathbb{T}$ for $0 < r < 1$ is zero.
 But on $\mathbb{T}$ we have that $g(z) = \overline{z}$ so its integral over $\mathbb{T}$ is not zero.
@@ -1566,7 +1573,7 @@ It suffices to show that $f \in \phi(U_r)$.
 Let's first show that $f$ is in $V_r = \overline{\phi(U_r)}$, by assuming otherwise, and showing it leads to a contradiction.
 Note that if $f, g \in U_r$ and $t \in [0, 1]$ then
 \[
-	\|tf + (1 - t)g\| \leq t\|f\| + (1 - t)\|g\| \leq tr + (1 - t)r = r
+	\|tf + (1 - t)g\| \leq t\|f\| + (1 - t)\|g\| < tr + (1 - t)r = r
 \]
 so $tf + (1 - t)g$ is also in $U_r$, showing it is convex.
 Its closure, $V_r$, is then convex as well.
@@ -1669,7 +1676,7 @@ We then say $K$ is a
 	The six classes of sets described in definition \ref{bigdef} are equivalent.
 \end{theorem}
 The first few sections of chapter $10$ in \citep{rudin3} are dedicated to proving this large theorem.
-One implication, namely that all null sets are peak-interpolation sets, follows directly from \ref{bishopstheorem}.
+One implication, namely that all null sets are peak-interpolation sets, follows from \ref{bishopstheorem}.
 
 \section{A variation of Bishop's theorem}
 \label{section5}
@@ -1692,7 +1699,7 @@ Then we have by \ref{fmrieszcor} that $E$ is $B^{\bot}$-null, so
 	\int_S f\ d\mu = \int_F f\ d\mu = 0.
 \]
 So let's assume $f$ can be extended to $F$ via $\mathcal{A}$.
-We also know that $F$ is in $H^1$ because it's a continuous function on a compact set and we know that $f = 0$ must hold on $\mathbb{D}$
+We also know that $F$ is in $H^1$ because it's a continuous function on a compact set and we know that $F = 0$ must hold on $\mathbb{D}$
 \citep[Theorem $13.4.11$]{greenkrantz}.
 So $F$ vanishes Lebesgue-almost everywhere on $\overline{\mathbb{D}}$ and is continuous.
 We can therefore state it is $0$ everywhere on $\overline{\mathbb{D}}$.
@@ -1727,9 +1734,9 @@ If
 \]
 for all $\mu$ in $B^{\bot}$ and
 \[
-	\int_S F\ d\mu = 0
+	\int_S G\ d\mu = 0
 \]
-holds for all $F$ in $B$ and $\mu$ in $B^{\bot}$ then there exists a function $F \in B$ such that $F = f$ on $S$ and $|F| < \Xi$ on $X$.
+holds for all $G$ in $B$ and $\mu$ in $B^{\bot}$ then there exists a function $F \in B$ such that $F = f$ on $S$ and $|F| < \Xi$ on $X$.
 \end{theorem}
 If we consider this theorem in the context of complex analysis we get:
 \begin{theorem}
@@ -1740,9 +1747,9 @@ If
 \]
 for all $\mu$ in $\mathcal{A}^n|_{\mathbb{T}^n}^{\bot}$ and
 \[
-	\int_S F\ d\mu = 0
+	\int_S G\ d\mu = 0
 \]
-holds for all $F$ in $\mathcal{A}^n$ and $\mu$ in $\mathcal{A}^n|_{\mathbb{T}}^{\bot}$ then there exists a function $F \in \mathcal{A}^n$ such that $F = f$ on $S$.
+holds for all $G$ in $\mathcal{A}^n$ and $\mu$ in $\mathcal{A}^n|_{\mathbb{T}}^{\bot}$ then there exists a function $F \in \mathcal{A}^n$ such that $F = f$ on $S$.
 \end{theorem}
 It would be interesting to continue the study of those $f$ and $S$ that satisfy these new condition.
 Note as well that the second condition, namely that
