--- a/verkefni.tex
+++ b/verkefni.tex
@@ -257,7 +257,7 @@ Niðurstaðan í kafla \ref{section5} er setning sem gefur nægjanleg skilyrði 
 I would like to thank my supervisor Benedikt Steinar Magnússon for his excellent guidance.
 I would also like to thank Ragnar Sigurðsson for his assistance throughout.
 I would like to thank my peers Atli, Eyleifur, Garðar, Hjörtur, and Þórarinn.
-I would like to thank Sandra for unending assistance.
+I would like to thank Sandra for her unending assistance.
 % Sandra
 % Benni
 % Ragnar
@@ -1794,7 +1794,7 @@ holds for all $F$ in $\mathcal{A}^n$ and $\mu$ in $\mathcal{A}^n|_{\mathbb{T}}^{
 %
 \indexitem{$H^p$}{index24}
 \indexitem{$H_H$}{index28}
-\indexitem{Holomorhpic in $\mathbb{C}^n$}{index9}
+\indexitem{Holomorphic in $\mathbb{C}^n$}{index9}
 \indexitem{Hölder}{index16}
 %
 \indexitem{Jordan curve}{index7}
