--- a/verkefni.tex
+++ b/verkefni.tex
@@ -1410,7 +1410,7 @@ Let's call it $h_H$ and define
 Note that $|\arg h_H(z)| \leq \pi/4$ since if a $w \in \mathbb{C}$ had an argument outside of this range then its square would have an argument outside of the range $[-\pi/2, \pi/2]$ meaning $\Re w^2 < 0$.
 Also, $q(z) = 0$ if and only if $h_{E_0} = \infty$, so $q$ is $0$ only on $E_0$, and $q(z) = 1$ if and only if $h_{E_1} = \infty$, so $q$ is $1$ only on $E_1$.
 We now want to show that $0 \leq \Re q \leq 1$.
-We will let $z, w \in \mathbb{C}$, with $|\arg z|, |\arg w| < \pi/4$ and $\Re z, \Re w > 1$, and show that $0 < \Re z/(w + z) < 1$.
+We will let $z, w \in \mathbb{C}$, with $|\arg z|, |\arg w| < \pi/4$ and $\Re z, \Re w > 1$, and show that $0 < \Re (z/(w + z)) < 1$.
 
 Note first that
 \[
