--- a/verkefni.tex
+++ b/verkefni.tex
@@ -1726,8 +1726,7 @@ Let $X$ be a compact Hausdorff space,
 	$V = (C(X), \| \cdot \|_{\infty})$,
 	$B$ be a closed subspace of $V$,
 	$S$ be a closed subset of $X$,
-	$f$ be a continuous function on $S$,
-	and continuous $\Xi: X \rightarrow [0, +\infty[$ such that $|f| < \Xi$ on $S$.
+	and $f$ be a continuous function on $S$.
 If
 \[
 	\int_S f\ d\mu = 0
@@ -1736,7 +1735,7 @@ for all $\mu$ in $B^{\bot}$ and
 \[
 	\int_S G\ d\mu = 0
 \]
-holds for all $G$ in $B$ and $\mu$ in $B^{\bot}$ then there exists a function $F \in B$ such that $F = f$ on $S$ and $|F| < \Xi$ on $X$.
+holds for all $G$ in $B$ and $\mu$ in $B^{\bot}$ then there exists a function $F \in B$ such that $F = f$ on $S$.
 \end{theorem}
 If we consider this theorem in the context of complex analysis we get:
 \begin{theorem}
